# xstring

./: .clang-format  .gitignore  Doxyfile  Makefile  meson.build
inc/pch/: common_pch.h
src/: main.c  xstring.c  xstring.h  xstring_defs.h
src/test/: test_result.h  tests.c  tests.h
src/util/: aliases.h
